Fix for bug 75633. preventing onStreamComplete firing prior to initialization.  r=valeski, gagan. sr=vidur.