netwerk/base/src/nsStreamLoader.h
@@ -37,7 +37,7 @@ public:
   NS_DECL_NSIREQUESTOBSERVER
   NS_DECL_NSISTREAMLISTENER
 
-  nsStreamLoader() { NS_INIT_REFCNT();} ;
+  nsStreamLoader() { NS_INIT_REFCNT(); mObserver = nsnull; } ;
   virtual ~nsStreamLoader() {};
 
   static NS_METHOD
